--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,3 +17,13 @@ jobs:
       run: npm install
     - name: Run tests
       run: npm test
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+    - name: ssh
+    ssh root@103.245.39.44
+    cd daud-erlangga/test_js
+    docker compose down
+    docker compose up
