--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,6 +20,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    needs : build
     steps:
     - name: ssh
       uses: appleboy/ssh-action@v1.0.3
